--- a/Pages/Cart.cshtml
+++ b/Pages/Cart.cshtml
@@ -21,12 +21,7 @@
                     <td>@item.Product.Name</td>
                     <td>@item.Quantity</td>
                     <td>@(item.Product.Price * item.Quantity)</td>
-                    <td>
-                        <form method="post" action="/Products/RemoveFromCart">
-                            <input type="hidden" name="productId" value="@item.Product.ID" />
-                            <button type="submit" class="btn btn-danger">Remove</button>
-                        </form>
-                    </td>
+                    
                 </tr>
             }
         </tbody>
@@ -35,6 +30,11 @@
     <div class="text-right">
         <h3>Total: @Model.TotalPrice</h3>
     </div>
+
+   
+    <form method="post">
+        <button type="submit" asp-page-handler="PlaceOrder" class="btn btn-primary mt-3">Place Order</button>
+    </form>
 }
 else
 {
