--- a/Pages/Categories/Delete.cshtml
+++ b/Pages/Categories/Delete.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category.Products)
+            @Html.DisplayNameFor(model => model.Category.ProductCategories)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.Products)
+            @Html.DisplayFor(model => model.Category.ProductCategories)
         </dd>
     </dl>
     
