--- a/Pages/Categories/Edit.cshtml
+++ b/Pages/Categories/Edit.cshtml
@@ -20,9 +20,9 @@
                 <span asp-validation-for="Category.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Category.Products" class="control-label"></label>
-                <input asp-for="Category.Products" class="form-control" />
-                <span asp-validation-for="Category.Products" class="text-danger"></span>
+                <label asp-for="Category.ProductCategories" class="control-label"></label>
+                <input asp-for="Category.ProductCategories" class="form-control" />
+                <span asp-validation-for="Category.ProductCategories" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
